sửa lại cách tổ chức code, test bị lôi